{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "6e9f4809-77bc-44db-826a-1d9ed79883a1",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7aae9cad-c9f5-4168-8e99-fc20ac13a17c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "46b33ffc-24c8-42cf-b4b6-d3ebea547e69",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "399ee80b-ead3-42a2-9ce8-4208e665e48c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "bfbf1cba-1965-41d1-a2ca-e1f018e8df6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomMap",
                    "type": "Button",
                    "id": "4044a982-5f8c-434b-8f9a-ed53b3bd08fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KeyBoard",
                    "type": "Value",
                    "id": "2bd503a4-c627-478b-a281-8d9bfdc9281d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SkillOne",
                    "type": "Button",
                    "id": "a6a02e26-308a-443a-8456-3720e36b9318",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillSecond",
                    "type": "Button",
                    "id": "49466d7f-da40-48bc-91c9-b1b61fffe6ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovementSkill",
                    "type": "Button",
                    "id": "99ca928b-215f-4bd6-b48c-e9b9729eec2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "9d540306-0736-4bd9-9217-b0fadccd0c0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Press",
                    "type": "Button",
                    "id": "2e604c7d-9b96-4fcf-a400-72f9939ccbfc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "53b368e5-415e-4ebf-a34b-3056cd94b0db",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "3efbcdf6-e0e2-4c97-805a-3f1edd60e83b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2dbcfc4c-6a49-4371-9121-974988637f6d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "72d35162-fb59-447e-b442-25ad8ef58c0c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "17fae267-7748-47db-a20b-ed2ab50a1441",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8f097a1a-86fe-4989-92b6-a69ca1704321",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowKey",
                    "id": "f922dbcf-1a70-4b02-9523-5bf9a274a9c5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1be5c36f-7a13-46aa-89b5-95981fbee45b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b3fe5c7e-718f-431c-94cc-9e884ee64fe6",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "19d3fc24-9689-419e-a6ee-440137ccfb1f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "87ef5d2b-1a6f-4a94-8962-acd2c482fddd",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fcd53f1e-a273-4c02-8e7f-f600a1d7b176",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2b62ecd-f4e7-42e4-8680-3f270a9c9534",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cf76d72-81ea-423a-ad2b-97c9445e8cd5",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "629a9c2c-6a99-4ade-8146-b25bc8c7e800",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec8fb9f4-824a-48c5-88b9-c784f8179f0c",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "KeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f92da47a-334b-43ae-af67-ec3e124b7c85",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "KeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80adc363-9c6c-4d9a-9b7d-fc2c6e5ad65f",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "KeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b62243a1-24fa-4eb6-9dd1-4afb7c337b3d",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "Scale(factor=5)",
                    "groups": "",
                    "action": "KeyBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d3cb6a1-4bf6-493a-9389-d60c42b75de9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillSecond",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc7398a8-2e8e-4e26-8fa5-dec658ac11b4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "064e8231-c22b-4f8b-9c47-9177802ce488",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c16da323-ce4c-4a1b-88ac-e61e27577e3d",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba94aa9a-7ff5-4e18-80a3-cca2702c764f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "8b9098dd-08c5-44db-8378-a493bc14d15a",
            "actions": [
                {
                    "name": "ExitMenu",
                    "type": "Button",
                    "id": "cb1097e2-c267-4c30-8d56-7ee13c8a13be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7fe6ea4e-d4d8-4758-9ada-c0092b0976d9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DealthMenu",
            "id": "20e87d9f-1040-493c-842d-ffc75224ccef",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Inventory ",
            "id": "b044697c-27be-4b3d-87b4-46a4feb08592",
            "actions": [
                {
                    "name": "CloseInventory",
                    "type": "Button",
                    "id": "cb00b76d-14e2-47fa-87cc-1f8a7d5f7c6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c8d2479-e11b-4ded-a963-04d0b3a0d8b3",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}